Terminar seccion hero y header

--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 </head>
 <body>
     <!-- section header start -->
-    <header class="container">
-        <a href="#" class="logo">Buy-Now</a>
-        <div class="toggleMenu">
-            <i class="fas fa-bars"></i>
-        </div>
-        <div class="navbar">
-            <ul class="navbar__links">
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
-                <li><a href="#testimonial">Testimonios</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-        </div>
-    </header>
+    <div class="bg-head">
+        <header class="header container">
+            <a href="#" class="logo">Buy-Now</a>
+            <div class="toggleMenu">
+                <i class="fas fa-bars icon-bar"></i>
+            </div>
+            <div class="navbar">
+                <div class="navbar__links">
+                    <a href="#home">Inicio</a>
+                    <a href="#about">Nosotros</a>
+                    <a href="#testimonial">Testimonios</a>
+                    <a href="#contact">Contacto</a>
+                </div>
+            </div>
+        </header>
+    </div>
     <!-- section hero start -->
     <section class="hero container">
-        <div>
+        <div class="hero__content">
             <h1>Construyendo productos digitales, brand y experiencia</h1>
             <p>Agencia digital es tu equipo online gestionando herramientas que ayudan al negocio i marqueting</p>
             <a href="#" class="btn hero__btn">Saber mas</a>
@@ -43,8 +45,8 @@
         </div>
     </section>
     <!-- section companies start -->
-    <section class="companies container">
-        <div class="companies__cards">
+    <section class="companies ">
+        <div class="companies__cards container">
             <a href="#" class="companie__card"><img src="img/amazon.png" alt="logo-amazon"></a>
             <a href="#" class="companie__card"><img src="img/microsoft.png" alt="logo-microsoft"></a>
             <a href="#" class="companie__card"><img src="img/netflix.png" alt="netflix"></a>
