Terminar parte visual desktop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" ></script>
 </head>
 <body>
     <!-- section header start -->
@@ -53,7 +53,7 @@
             <a href="#" class="companie__card"><img src="img/spotify.png" alt="logo-spotify"></a>
         </div>
     </section>
-    <section class="work">
+    <section class="work container">
         <div class="work__content">
             <div class="work__img">
                 <img src="img/work.png" alt="">
@@ -137,52 +137,55 @@
     </section>
     <section class="subscribe container">
         <div class="subscribe__img">
-            <img src="img/" alt="">
+            <img src="img/subs.png" alt="">
         </div>
-        <div>
+        <div class="subscribe__content">
             <h2>Se parte de nuestra familia</h2>
             <p>Estamos actualizando in email world with currented articles,guides and video to enhance your marketing tactics</p>
-            <a href="#" class="subscribe__btn">Contactanos</a>
+            <a href="#" class="btn subscribe__btn">Contactanos</a>
         </div>
 
     </section>
     <footer class="footer container">
         <div class="footer-box">
 
-        </div>
-        <div class="footer__content">
-            <a href="#" class="logo">Buy-Now</a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, consequatur?</p>
-        </div>
-        <div class="footer__section">
-            <h4>Recursos</h4>
-            <div>
-                <a href="#">Guias</a>
-                <a href="#">Blog</a>
-                <a href="#">Terminos y condiciones</a>
-                <a href="#">Privacidad</a>
+            <div class="footer__content">
+                <a href="#" class="logo">Buy-Now</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, consequatur?</p>
             </div>
-        </div>
-        <div class="footer__section">
-            <h4>Compañia</h4>
-            <div>
-                <a href="#">Nosotros</a>
-                <a href="#">Carreras</a>
-                <a href="#">Contacto</a>
-                <a href="#">Colaboradores</a>
-            </div>
-        </div>
-        <div class="footer__section">
-            <h4>Comunidad</h4>
-            <div>
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Twitter</a>
-                <a href="#">LinkendIn</a>
+            <div class="footer__social">
+
+                <div class="footer__section">
+                    <h4>Recursos</h4>
+                    <div>
+                        <a href="#">Guias</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Terminos y condiciones</a>
+                        <a href="#">Privacidad</a>
+                    </div>
+                </div>
+                <div class="footer__section">
+                    <h4>Compañia</h4>
+                    <div>
+                        <a href="#">Nosotros</a>
+                        <a href="#">Carreras</a>
+                        <a href="#">Contacto</a>
+                        <a href="#">Colaboradores</a>
+                    </div>
+                </div>
+                <div class="footer__section">
+                    <h4>Comunidad</h4>
+                    <div>
+                        <a href="#">Facebook</a>
+                        <a href="#">Instagram</a>
+                        <a href="#">Twitter</a>
+                        <a href="#">LinkendIn</a>
+                    </div>
+                </div>
             </div>
         </div>
         <p class="copyright"> 2023 Github Valece</p>
     </footer>
-    <script src="js/app.js" defer></script>
+    <script src="js/app.js" ></script>
 </body>
 </html>
